--- a/css/app.css
+++ b/css/app.css
@@ -101,7 +101,8 @@ h1 {
     margin: 0 5px 0 0;
 }
 
-.score-panel .stars li {
+.score-panel .stars li,
+.modal li {
     list-style: none;
     display: inline-block;
 }
