Move congrats to html, add reset to modal.

--- a/css/app.css
+++ b/css/app.css
@@ -94,7 +94,8 @@ h1 {
     margin-bottom: 10px;
 }
 
-.score-panel .stars {
+.score-panel .stars,
+.winning-score-panel .stars {
     margin: 0;
     padding: 0;
     display: inline-block;
